have input change

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
         <h1>Welcome to our game</h1>
         <div>
             <p><label> Enter your Name</label></p>
-            <p><input id="name-input"/></p>
+            <!-- <p><input id="name-input"/></p> -->
+             <p><input id="name-input" value="Samson"/></p>
             <p id="submit-button"></p>
             <!-- <p>
                 <button>Submit</button>
             </p> -->
         </div>
     </div>
+    <script src="./js/main.js"></script>
 </body>
 </html>
